app/design/adminhtml/Magento/backend/web/css/source/forms/_temp.less
// /**
//  * Copyright © Magento, Inc. All rights reserved.
//  * See COPYING.txt for license details.
//  */

//
//  Admin section wrapper title @todo ui - find the right place
//  _____________________________________________

.fieldset-wrapper-title,
.admin__fieldset-wrapper-title {
    &:extend(.abs-clearfix all);
    border-bottom: 1px solid @color-gray80;
    line-height: 1.2;
    margin-bottom: 0;
    padding: 14px 0 16px;

    .title {
        font-size: 2rem;
        font-weight: 400;

        .admin__fieldset-wrapper-content & {
            font-size: 1.5rem;
            font-weight: 700;
        }

        &.active {
            ~ .actions {
                display: none;
            }
        }
    }

    .actions {
        display: block;
        float: right;
    }
}

.admin__fieldset-wrapper-content {
    .admin__fieldset {
        padding-bottom: 3rem;
        padding-top: 3rem;

        > .admin__collapsible-block-wrapper {
            &:first-child {
                margin-top: -3rem;
            }
        }

        > *:first-child {
            margin-top: 0;
        }

        > *:last-child {
            margin-bottom: 0;
        }
    }
}

//  @todo ui Move to other place - will be done in upcoming task 'Address Tabs':

.address-item-edit-content {
    background: @color-white;
    border: 1px solid @color-gray-brown;
    box-shadow: 0 2px 1px 0 rgba(217, 210, 202, .5);
    margin-left: 359px;
    max-width: 500px;
    padding: 15px 30px;

    .admin__field {
        &:extend(.abs-field-rows all);
    }

    .admin__legend {
        display: none;
    }
}

.address-list {
    float: left;
    list-style-type: none;
    margin: 0;
    padding: 0;
    width: 360px;

    .address-list-item-actions {
        position: absolute;
        right: 1rem;
        top: 1rem;
    }

    .address-list-item {
        background: @color-white-fog2;
        border: 1px solid @color-gray-brown;
        cursor: pointer;
        margin-bottom: -1px;
        padding: 10px 10px 15px;
        position: relative;
        z-index: 1;

        &.ui-state-active {
            background: @color-white;
            box-shadow: 0 1px 1px 0 rgba(217, 210, 202, 1);
            margin-left: -2px;
            padding-left: 12px;
            position: relative;
            z-index: 2;

            &:before,
            &:after {
                color: @color-white;
                content: '\e02a';
                font-family: 'MUI-Icons';
                font-size: 18px;
                font-style: normal;
                font-weight: normal;
                line-height: 11px;
                margin-top: -5px;
                position: absolute;
                right: -9px;
                speak: none;
                text-indent: -6px;
                top: 50%;
                width: 10px;
                z-index: 2;
            }

            &:before {
                color: @color-gray-brown;
                right: -11px;
                z-index: 1;
            }
        }
    }

    address {
        font-style: normal;
        line-height: 1.5;
        margin: 0 20px 15px 0;

        &:first-line {
            //  It does not work if First Name and Last Name are arranged in two lines
            font-weight: bold;
        }
    }

    .address-list-actions {
        background: none;
        border: 0;
        box-shadow: none;
        cursor: default;
        padding: 20px 0 0;
    }

    .action-delete {
        .lib-button-reset();
        .lib-icon-font(
            @icon-remove-small__content,
            @icons-admin__font-name,
            @_icon-font-size: 1.6rem,
            @_icon-font-line-height: 16px,
            @_icon-font-text-hide: true,
            @_icon-font-position: after,
            @_icon-font-color: @color-brown-darkie
        );

        span {
            max-height: 1px;
            max-width: 1px;
        }

        &:hover {
            position: relative;
            z-index: 2;

            &:after {
                color: darken(@color-brown-darkie, 20%);
            }

            //  @Todo ui - testing solution to show action hint without title attribute
            span {
                background-color: @color-very-light-gray;
                border: 1px solid @color-heathered-grey;
                border-radius: .4rem;
                bottom: 100%;
                clip: auto;
                font-size: @font-size__s;
                height: auto;
                left: auto;
                margin: 0 auto .1rem;
                max-height: 50px;
                max-width: 200px;
                padding: .5rem;
                right: auto;
                top: auto;
                transition: all .01s linear .7s;
                white-space: nowrap;
                width: auto;
            }
        }
    }
}

//
//  Login page form errors @todo ui - remove after validation consistency
//  _____________________________________________

[class*='admin__control-'].mage-error ~ [class*='admin__addon-']:before,
.admin__field-control > [class*='admin__control-'].mage-error {
    border-color: @field-error-control__border-color;
}

label.mage-error {
    &:extend(.admin__field-error);
}

//
//  Login page captcha reload @todo ui - remove after loader consistency
//  _____________________________________________

.page-layout-admin-login {
    .loading-mask {
        background: rgba(255,255,255,.2);
        height: 100%;
        left: 0;
        position: absolute;
        top: 0;
        width: 100%;
        z-index: @z-index-10;
    }

    .popup-loading {
        height: 149px;
        left: 50%;
        margin-left: -218px/2;
        margin-top: -149px/2;
        overflow: hidden;
        position: absolute;
        top: 50%;
        width: 218px;
    }
}
/* ... */

